# FuzzingBrain-Bench

./: README.md  pyproject.toml
bugs/avro/avro-03/harness/: harness.c
bugs/libxml2/libxml2-01/: bench.yaml
bugs/libxml2/libxml2-01/harness/: build.sh
docs/: PROMPTS.md  index.html  leaderboard.html  trophies.html
docs/assets/: site.js
fbbench/: env.py  prompts.py
fbbench/cli/: commands.py  main.py
fbbench/models/: __init__.py  catalog.py  pricing.py
fbbench/report/: __init__.py  summary.py  summary_template.html
fbbench/runner/: README.md  __main__.py  episode.py  mcp_client.py  report.py  traj.py
fbbench/runner/backends/: __init__.py  gemini_backend.py  openai_backend.py
fbbench/sweep/: claudecode.py  codex.py  orchestrator.py  test_no_cheat.py
tools/mcp-server/: exec.go  files.go  go.mod  grade.go  grade_crashfired_test.go  gradeserver.go  main.go  reach.go  setup.go  yamlshim.go
tools/sealed/: CHALLENGES.md  README.md  build_all.py  build_challenge.py  push_all.py  verify_canonical.py  verify_sealed.py
