[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuzzingbrain-bench"
version = "1.0.0"
description = "A capability-ladder benchmark for LLM-driven vulnerability reproduction on real C / C++ / Java open-source bugs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ze Sheng", email = "zesheng@tamu.edu" },
    { name = "Jeff Huang" },
]
keywords = ["benchmark", "llm", "security", "fuzzing", "vulnerability"]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "google-genai>=0.3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/OwenSanzas/FuzzingBrain-Bench"

[project.scripts]
fb-bench = "fbbench.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["fbbench*"]

[tool.setuptools.package-data]
"fbbench.report" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
